--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -12,6 +12,10 @@
       href="%% url_for('static', filename='css/sweetalert2.min.css') %%"
     />
     <link
+      rel="stylesheet"
+      href="%% url_for('static', filename='css/fontawesome.min.css') %%"
+    />
+    <link
       rel="shortcut icon"
       href="%% url_for('static', filename='img/logo.png') %%"
       type="image/x-icon"
@@ -19,13 +23,13 @@
     <style>
       @font-face {
         font-family: logo-font;
-        src: url(%% url_for('static', filename='font/Russian.ttf') %%);
+        src: url(%%url_for("static", filename= "font/Russian.ttf")%%);
       }
     </style>
     <title>El Promediador</title>
   </head>
   <body>
-    <div id="app" class="vh-100">
+    <div id="app" class="vh-100 d-flex flex-column">
       <nav class="navbar navbar-dark bg-primary">
         <a href="/" class="navbar-brand mx-md-0 mx-auto my-2 my-md-0">
           <img
@@ -54,7 +58,7 @@
             />
           </div>
           <button
-            class="btn btn-sm btn-secondary btn-danger mx-sm-0 mx-auto"
+            class="btn btn-sm btn-danger mx-sm-0 mx-auto"
             type="submit"
             id="btnObtenerNotas"
             v-on:click="obtenerNotas"
@@ -62,28 +66,35 @@
             Obtener notas
           </button>
         </form>
+        <button
+          class="btn btn-sm btn-warning mx-auto mx-md-0 ml-md-2 mt-2 mt-sm-0"
+          v-on:click="mostrarInfo"
+        >
+          <i class="fas fa-info-circle"></i>
+        </button>
       </nav>
-      <div v-if="consolidado">
-        <div class="container">
-          <div
-            class="row my-4 align-items-center text-light bg-danger p-3 rounded shadow"
-          >
-            <div class="col-12 col-sm-8 col-lg-10">
-              <div class="">
-                <h5 class="font-weight-bold" id="nombres">
-                  {{consolidado.nombre}}
-                </h5>
-                <h6 class="font-weight-lighter" id="data">
-                  Carrera: {{consolidado.carrera}}<br />
-                  Ciclo actual: {{idCicloActual}}<br />
-                  Promedio acumulado: {{consolidado.promedio_ponderado}}
-                </h6>
-              </div>
+      <div v-if="consolidado" class="container">
+        <div
+          class="row my-4 align-items-center text-light bg-danger p-3 rounded shadow"
+        >
+          <div class="col-12 col-sm-8 col-lg-10">
+            <div class="">
+              <h5 class="font-weight-bold" id="nombres">
+                {{consolidado.nombre}}
+              </h5>
+              <h6 class="font-weight-lighter" id="data">
+                Carrera: {{consolidado.carrera}}<br />
+                Ciclo actual: {{idCicloActual}}<br />
+                Promedio acumulado: {{consolidado.promedio}}
+              </h6>
             </div>
-            <div class="col-12 col-sm-4 col-lg-2">
+          </div>
+          <div class="col-12 col-sm-4 col-lg-2 text-center">
+            <h6 class="font-weight-lighter my-2">CICLO</h6>
+            <div class="input-group input-group-sm">
               <select
                 class="custom-select my-2 my-md-0"
-                v-model="idCicloActual"
+                v-model="idCiclo"
                 v-on:change="seleccionarCiclo"
               >
                 <option v-for="ciclo in ciclos" :value="ciclo"
@@ -92,154 +103,156 @@
               </select>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <div class="accordion shadow" id="accordionCursos">
-                <div class="card" v-for="(curso, index) in cicloActual.cursos">
-                  <div class="card-header p-1">
-                    <button
-                      class="btn btn-block btn-link text-left"
-                      data-toggle="collapse"
-                      :data-target="`#collapseCurso${index}`"
-                    >
-                      {{curso.nombre}}
-                    </button>
-                  </div>
-                  <div
-                    class="collapse"
-                    :id="`collapseCurso${index}`"
-                    data-parent="#accordionCursos"
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="accordion shadow mb-4" id="accordionCursos">
+              <div class="card" v-for="(curso, index) in cicloActual.cursos">
+                <div class="card-header p-1">
+                  <button
+                    class="btn btn-block btn-link text-left"
+                    data-toggle="collapse"
+                    :data-target="`#collapseCurso${index}`"
                   >
-                    <div class="card-body p-4">
-                      <div class="table-responsive">
-                        <table
-                          class="table table-sm table-bordered"
-                          style="font-size: 70%;"
-                        >
-                          <thead class="thead-dark">
-                            <tr>
-                              <th>Tipo</th>
-                              <th>Evaluación</th>
-                              <th class="text-center">N°</th>
-                              <th class="text-center">Peso</th>
-                              <th class="text-center">Nota</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr v-for="nota in curso.notas">
-                              <td>{{nota.tipo}}</td>
-                              <td>{{nota.evaluacion}}</td>
-                              <td align="center">{{nota.numero}}</td>
-                              <td align="center">
-                                {{(nota.peso * 100) + '%' }}
-                              </td>
-                              <td v-if="nota.obs !== 'P'" align="center">
-                                {{nota.nota}}
-                              </td>
-                              <td v-else align="center">
-                                <div class="input-group input-group-sm">
-                                  <input
-                                    type="text"
-                                    class="form-control mx-auto"
-                                    v-model.number="nota.nota"
-                                    :class="{'is-invalid': !(nota.nota >= 0 && nota.nota <= 20)}"
-                                    style="max-width: 40px; font-size: 90%;"
-                                  />
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                          <thead>
-                            <tr>
-                              <th colspan="4">Promedio</th>
-                              <td align="center" class="font-weight-bold">
-                                {{calcularPromedioCurso(curso)}}
-                              </td>
-                            </tr>
-                          </thead>
-                        </table>
-                      </div>
+                    {{curso.nombre}}
+                  </button>
+                </div>
+                <div
+                  class="collapse"
+                  :id="`collapseCurso${index}`"
+                  data-parent="#accordionCursos"
+                >
+                  <div class="card-body p-4">
+                    <div class="table-responsive">
+                      <table
+                        class="table table-sm table-bordered"
+                        style="font-size: 70%;"
+                      >
+                        <thead class="thead-dark">
+                          <tr>
+                            <th>Tipo</th>
+                            <th>Evaluación</th>
+                            <th class="text-center">N°</th>
+                            <th class="text-center">Peso</th>
+                            <th class="text-center">Nota</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr v-for="nota in curso.notas">
+                            <td>{{nota.tipo}}</td>
+                            <td>{{nota.evaluacion}}</td>
+                            <td align="center">{{nota.numero}}</td>
+                            <td align="center">
+                              {{ Math.round(((nota.peso * 100) + Number.EPSILON)
+                              * 100) / 100 + '%' }}
+                            </td>
+                            <td v-if="nota.obs !== 'P'" align="center">
+                              {{nota.nota}}
+                            </td>
+                            <td v-else align="center">
+                              <div class="input-group input-group-sm">
+                                <input
+                                  type="text"
+                                  class="form-control mx-auto"
+                                  v-model.number="nota.nota"
+                                  :class="{'is-invalid': !(nota.nota >= 0 && nota.nota <= 20)}"
+                                  style="max-width: 40px; font-size: 90%;"
+                                />
+                              </div>
+                            </td>
+                          </tr>
+                        </tbody>
+                        <thead>
+                          <tr>
+                            <th colspan="4">Promedio</th>
+                            <td align="center" class="font-weight-bold">
+                              {{calcularPromedioCurso(curso)}}
+                            </td>
+                          </tr>
+                        </thead>
+                      </table>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 mt-4 mt-md-0">
-              <div class="card shadow">
-                <div class="card-body">
-                  <h5 class="font-weight-bold text-center">Resumen ciclo</h5>
-                  <div class="table-responsive">
-                    <table
-                      class="table table-sm table-bordered"
-                      style="font-size: 70%;"
-                    >
-                      <thead class="bg-primary text-white">
-                        <tr>
-                          <th>Nombre</th>
-                          <th>Créditos</th>
-                          <th>Promedio</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr v-for="curso in cicloActual.cursos">
-                          <td>{{curso.nombre}}</td>
-                          <td align="center">{{curso.creditos}}</td>
-                          <td align="center">{{curso.promedio}}</td>
-                        </tr>
-                      </tbody>
-                      <thead>
-                        <tr>
-                          <th colspan="2">Promedio ponderado</th>
-                          <th align="center" class="text-center">
-                            {{calcularPromedioCiclo(cicloActual)}}
-                          </th>
-                        </tr>
-                      </thead>
-                    </table>
-                  </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="card shadow mb-4">
+              <div class="card-body">
+                <h5 class="font-weight-bold text-center">Resumen ciclo</h5>
+                <div class="table-responsive">
+                  <table
+                    class="table table-sm table-bordered"
+                    style="font-size: 70%;"
+                  >
+                    <thead class="bg-primary text-white">
+                      <tr>
+                        <th>Nombre</th>
+                        <th class="text-center">Créditos</th>
+                        <th class="text-center">Promedio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr v-for="curso in cicloActual.cursos">
+                        <td>{{curso.nombre}}</td>
+                        <td align="center">{{curso.creditos}}</td>
+                        <td align="center">{{curso.promedio}}</td>
+                      </tr>
+                    </tbody>
+                    <thead>
+                      <tr>
+                        <th colspan="2">Promedio ponderado</th>
+                        <th align="center" class="text-center">
+                          {{calcularPromedioCiclo(cicloActual)}}
+                        </th>
+                      </tr>
+                    </thead>
+                  </table>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div v-else>
-        <div class="container">
-          <div class="row justify-content-center my-5">
-            <div class="col d-flex justify-content-center">
-              <div class="card border-primary" style="max-width: 20em;">
-                <div class="card-body text-primary">
-                  <h5 class="card-title text-center" style="font-family: logo-font; font-size: 45px;">El Promediador</h5>
-                  <p class="card-text text-center">
-                    Solo necesitas ingresar tu código de usuario UPC y
-                    contraseña para obtener tus notas y promediarlas
-                    automáticamente.
-                  </p>
-                </div>
+      <div v-else class="container">
+        <div class="row justify-content-center my-5">
+          <div class="col d-flex justify-content-center">
+            <div class="card border-primary" style="max-width: 20em;">
+              <div class="card-body text-primary">
+                <h5
+                  class="card-title text-center"
+                  style="font-family: logo-font; font-size: 45px;"
+                >
+                  El Promediador
+                </h5>
+                <p class="card-text text-center">
+                  Solo necesitas ingresar tu código de usuario UPC y contraseña
+                  para obtener tus notas y promediarlas automáticamente.
+                  <br />
+                  <br />
+                  Más información en el botón amarillo superior
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <footer
-        class="footer"
-        style="
-          position: absolute;
-          bottom: 0;
-          width: 100vw;
-          height: 45px;
-          line-height: 45px;
-          background-color: #e8e8e8;
-          font-size: 85%;
-          display: flex;
-          justify-content: center;
-        "
+        class="d-flex position-relative justify-content-between mt-auto px-4 py-3"
+        style="background-color: #e8e8e8; font-size: 90%;"
       >
-        <!-- <div class="container"> -->
-          <span class="text-muted">Hecho con ❤️ por BicaStudios</span>
-          <!-- <br> -->
-          <!-- <span class="text-muted">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></span> -->
-        <!-- </div> -->
+        <span class="text-muted text-center">Hecho con ❤️ por BicaStudios</span>
+        <div class="text-muted text-center">
+          íconos hechos por
+          <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+            >Freepik</a
+          >
+          de
+          <a href="https://www.flaticon.com/" title="Flaticon"
+            >www.flaticon.com</a
+          >
+        </div>
       </footer>
     </div>
     <script src="%% url_for('static', filename='js/jquery-3.4.1.min.js') %%"></script>
@@ -250,6 +263,7 @@
     <script>
       let codigo = "";
       let contrasena = "";
+      let idCiclo = null;
       let idCicloActual = null;
       let consolidado = null;
       let cicloActual = null;
@@ -260,6 +274,7 @@
           codigo,
           contrasena,
           consolidado,
+          idCiclo,
           idCicloActual,
           cicloActual,
           ciclos,
@@ -278,7 +293,10 @@
               beforeSend: () => {
                 swal.fire({
                   title: "Por favor, espere...",
-                  text: "Extrayendo notas de INTRANET UPC",
+                  html: `Extrayendo notas de INTRANET UPC
+                    <br>
+                    <br>
+                    Esto puede tomar entre 30 y 60 segundos`,
                   icon: "info",
                   allowOutsideClick: false,
                   allowEnterKey: false,
@@ -291,12 +309,14 @@
             }).done((data) => {
               this.consolidado = data;
               this.idCicloActual = this.consolidado.ciclo_actual;
+              this.idCiclo = this.idCicloActual;
               this.cicloActual = this.consolidado.ciclos.find(
-                (ciclo) => ciclo.id == this.idCicloActual
+                (ciclo) => ciclo.id == this.idCiclo
               );
               this.ciclos = this.consolidado.ciclos
                 .map((ciclo) => ciclo.id)
                 .reverse();
+              this.calcularPromedioAcumulado();
               swal.close();
             });
           },
@@ -327,10 +347,44 @@
             ciclo.promedio = promedio;
             return promedio;
           },
+          calcularPromedioAcumulado: function () {
+            this.consolidado.ciclos.forEach((ciclo) =>
+              ciclo.cursos.forEach(
+                (curso) => (curso.promedio = this.calcularPromedioCurso(curso))
+              )
+            );
+            cursos = this.consolidado.ciclos
+              .filter((ciclo) => ciclo.estado === "CERRADO")
+              .flatMap((ciclo) => ciclo.cursos)
+              .filter((curso) => curso.estado === "CERRADO");
+            a = cursos.reduce(
+              (acc, val) => acc + val.promedio * val.creditos,
+              0
+            );
+            b = cursos.reduce((acc, val) => acc + val.creditos, 0);
+            promedio = Math.round((a / b + Number.EPSILON) * 100) / 100;
+            console.log(a, b, promedio);
+            console.log(cursos);
+            this.consolidado.promedio = promedio;
+          },
           seleccionarCiclo: function () {
             this.cicloActual = this.consolidado.ciclos.find(
-              (ciclo) => ciclo.id == this.idCicloActual
+              (ciclo) => ciclo.id == this.idCiclo
             );
+          },
+          mostrarInfo: function () {
+            swal.fire({
+              title: "El Promediador",
+              html: `Hecho por y para alumnos de la UPC
+                <br>
+                Contacto y sugerencias a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
+              icon: "question",
+              iconHtml: `<img
+                    src="%% url_for('static', filename='img/logo.png') %%"
+                    alt="logo"
+                    width="50px"
+                  />`,
+            });
           },
         },
       });
