Sin debug y correcciones minimas

--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -385,7 +385,7 @@
                 if (data.db_status === "ERROR") {
                   swal.fire({
                     title: "😂",
-                    html: `LOL, no pudimos registrar tu consulta en el historial (esto es ajeno a la obtención de notas y opcional)
+                    html: `LOL, no pudimos registrar tu consulta en nuestro historial (esto es ajeno a la obtención de notas y es opcional)
                     <br>
                     <br>
                     Agradecería que me notifiques de esta alerta enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
