--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -333,7 +333,7 @@
               beforeSend: () => {
                 swal.fire({
                   title: "Por favor, espere...",
-                  html: `Extrayendo notas de SOCRATES UPC
+                  html: `Extrayendo todo el historial de notas desde SOCRATES UPC
                     <br>
                     <br>
                     Esto puede tomar hasta 3 minutos aprox.`,
@@ -367,10 +367,10 @@
                     html: `No se pudo acceder ni obtener las notas de SOCRATES UPC
                     <br>
                     <br>
-                    Revisa tus datos y la disponibilidad de SOCRATES UPC
+                    Revisa tus datos y la disponibilidad de SOCRATES UPC. Luego vuelve a intentarlo
                     <br>
                     <br>
-                    Agradecería que me notifiques de este error enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>
+                    Si el problema persiste, agradecería que me notifiques de este error enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>
                     <br>
                     <br>
                     <strong>NOTA: No olvides que luego de 3 intentos fallidos de acceso a los servicios de la UPC, se bloqueará tu cuenta.
@@ -384,7 +384,7 @@
                     html: `LOL, no pudimos registrar tu consulta en nuestro historial (esto es ajeno a la obtención de notas y es opcional)
                     <br>
                     <br>
-                    Agradecería que me notifiques de esta alerta enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
+                    Si el problema persiste, agradecería que me notifiques de esta alerta enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
                     icon: "warning",
                   });
                 }
@@ -399,7 +399,7 @@
                   Revisa tu conectividad y refresca la página
                   <br>
                   <br>
-                  Agradecería que me notifiques de este error enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
+                  Si el problema persiste, agradecería que me notifiques de este error enviando tu codigo UPC y la hora aproximada de tu consulta en un correo a <a href="mailto:edarbieto@gmail.com">edarbieto@gmail.com</a>`,
                   icon: "error",
                 });
               });
